# tigr81

./: .gitignore  README.md
.github/workflows/: cicd.yaml
monorepo-manifest-examples/: manifest.yml
project_scaffolded/fastapi/: pyproject.toml
project_scaffolded/fastapi/fastapi/: app.py
project_scaffolded/fastapi/fastapi/config/: loading.py  model.py
project_scaffolded/fastapi/fastapi/resources/config/: default.yml
project_scaffolded/fastapi/fastapi/routers/: health.py
project_scaffolded/fastapi/tests/routers/: test_health.py
project_scaffolded/fastapi_app/: pyproject.toml
project_scaffolded/fastapi_app/fastapi_app/: __main__.py  app.py  dependencies.py
project_scaffolded/fastapi_app/fastapi_app/config/: loading.py  model.py
project_scaffolded/fastapi_app/tests/: __init__.py
project_scaffolded/fastapi_app/tests/routers/: test_health.py
project_scaffolded/poetry_pkg/: pyproject.toml
project_scaffolded/poetry_pkg/poetry_pkg/config/: loading.py  model.py
project_scaffolded/poetry_pkg/tests/: __init__.py  test_init.py
project_scaffolded/primereact/: .eslintrc.cjs  .prettierrc  index.html  package.json  tailwind.config.js
project_scaffolded/primereact/public/themes/lara-dark-green/: theme.css
project_scaffolded/primereact/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
project_scaffolded/primereact/src/api/login/: index.ts  login.ts
project_scaffolded/primereact/src/auth/: auth.ts
project_scaffolded/primereact/src/components/: SidebarMenu.tsx  ThemeSwitcher.tsx
project_scaffolded/primereact/src/components/icons/: GCPIcon.tsx  enum.ts
project_scaffolded/primereact/src/pages/: Layout.tsx
project_scaffolded/primereact/src/pages/home/: HomePage.tsx
project_scaffolded/primereact/src/pages/home/components/: SideMenu.tsx
project_scaffolded/primereact/src/pages/login/: LoginPage.tsx
project_scaffolded/primereact/src/pages/poc/: PocPage.tsx
project_scaffolded/webserver/: README.md  pyproject.toml
project_scaffolded/webserver/docker/: Dockerfile
project_scaffolded/webserver/tests/resources/: README.md
project_scaffolded/webserver/tests/routers/: test_health.py
project_scaffolded/webserver/webserver/: __init__.py  __main__.py  app.py  app_settings.py
project_scaffolded/webserver/webserver/config/: loading.py  model.py
project_scaffolded/webserver/webserver/resources/config/: local.yml
project_scaffolded/webserver/webserver/routers/: health.py
project_templates/fastapi/: cookiecutter.json
project_templates/fastapi/{{cookiecutter.name}}/: pyproject.toml  requirements.txt
project_templates/fastapi/{{cookiecutter.name}}/docker/: Dockerfile  docker-compose.yml
project_templates/fastapi/{{cookiecutter.name}}/package/: setup.py
project_templates/fastapi/{{cookiecutter.name}}/package/{{cookiecutter.package_name}}/: __init__.py  app.py
project_templates/fastapi/{{cookiecutter.name}}/package/{{cookiecutter.package_name}}/config/: model.py
project_templates/fastapi/{{cookiecutter.name}}/tests/routers/: test_health.py
project_templates/fastapi/{{cookiecutter.name}}/{{cookiecutter.package_name}}/: __init__.py  __main__.py  app.py  app_settings.py  dependencies.py
project_templates/fastapi/{{cookiecutter.name}}/{{cookiecutter.package_name}}/config/: loading.py  model.py
project_templates/fastapi/{{cookiecutter.name}}/{{cookiecutter.package_name}}/resources/config/: local.yml  logging.conf
project_templates/poetry_pkg/: cookiecutter.json
project_templates/poetry_pkg/{{cookiecutter.name}}/: pyproject.toml
project_templates/poetry_pkg/{{cookiecutter.name}}/{{cookiecutter.package_name}}/config/: loading.py  model.py
project_templates/prime-react/: cookiecutter.json
project_templates/prime-react/{{cookiecutter.name}}/: .gitignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
project_templates/prime-react/{{cookiecutter.name}}/src/: App.tsx  defaultPt.ts  index.css  main.tsx
project_templates/prime-react/{{cookiecutter.name}}/src/api/: apiClient.ts  apiRequest.ts
project_templates/prime-react/{{cookiecutter.name}}/src/auth/: index.ts  types.ts
project_templates/prime-react/{{cookiecutter.name}}/src/components/: SidebarMenu.tsx  ThemeSwitcher.tsx
project_templates/prime-react/{{cookiecutter.name}}/src/config/: config.ts  configDev.ts
project_templates/prime-react/{{cookiecutter.name}}/src/pages/: Layout.tsx
project_templates/prime-react/{{cookiecutter.name}}/src/redux/: store.ts
tigr81/: .envrc  README.md  pyproject.toml
tigr81/tests/: __init__.py
tigr81/tests/commands/core/gitw/: test_is_cookiecutter_template.py
tigr81/tigr81/: __init__.py  cli_settings.py  main.py
tigr81/tigr81/commands/: models.py  scaffold.py
tigr81/tigr81/commands/core/: gitw.py  poetry_pm.py  scaffold.py
tigr81/tigr81/commands/hub/: helpers.py  hub.py  models.py
tigr81/tigr81/commands/monorepo/: __init__.py  constants.py  manifest.py  monorepo.py
tigr81/tigr81/commands/scaffold/: manifest.py  project_template.py  scaffold.py  select_project_type_interactive.py
tigr81/tigr81/resources/hubs/: primereact_examples.yml  tigr81_hub_templates.yml
tigr81/tigr81/utils/: __init__.py  create_interactive_prompt.py  pretty.py  read_yaml.py
(+6 files in other folders)
