[tool.poetry]
name = "tigr81"
version = "0.1.0"
description = ""
authors = ["Giuseppe Ambrosio <giuambro97@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
tigr81 = "tigr81.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
