[tool.poetry]
name = "tigr81"
version = "1.1.2"
description = ""
authors = ["Giuseppe Ambrosio <giuambro97@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
tigr81 = "tigr81.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.9.0"}
cookiecutter = "^2.4.0"
pydantic = "^2.4.2"
email-validator = "^2.0.0.post2"
pyyaml = "^6.0.1"
graphviz = "^0.20.1"
pydantic-settings = "^2.2.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
autoflake = "^2.2.1"
black = "^23.9.1"
mypy = "^1.5.1"
isort = "^5.12.0"
datamodel-code-generator = "^0.22.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
