[tool.poetry]
name = "webserver"
version = "0.1.0"
description = "FAST API web app"
authors = ["giuambro97 <giuambro97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.23.2"
fastapi = "^0.103.2"
pyyaml = "^6.0.1"
httpx = "^0.25.0"
pydantic-settings = "^2.2.1"
pydantic = "^2.9.2"



[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
isort = "^5.12.0"
black = "^23.9.1"
autoflake = "^2.2.1"
ruff = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
