[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_min_version}}"
uvicorn = "^0.23.2"
fastapi = "^0.103.2"
pyyaml = "^6.0.1"
httpx = "^0.25.0"
pydantic-settings = "^2.2.1"
pydantic = "^2.9.2"
{% for pkg_name, dependency in cookiecutter.dependencies|dictsort -%}
  {{ dependency.name }} = { path = "{{ dependency.relative_path }}", develop = true }
{% endfor %}


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
isort = "^5.12.0"
black = "^23.9.1"
autoflake = "^2.2.1"
ruff = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
