[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "1.0.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_min_version}}"
{% for pkg_name, dependency in cookiecutter.dependencies|dictsort -%}
  {{ dependency.name }} = { path = "{{ dependency.relative_path }}", develop = true }
{% endfor %}

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
isort = "^5.12.0"
black = "^23.9.1"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
